proper svg-clip-path, no display or visibility can be changed, opacity instead. speed bug after every 360deg turn

--- a/src/sass/components/_skills.scss
+++ b/src/sass/components/_skills.scss
@@ -421,11 +421,9 @@ html.preserve3d.csstransforms3d {
 	}
 
 	/* Hide additional faces */
-	.front-2,
-	.right-2,
-	.back-2,
-	.left-2{
-		display: none;
+	.swiper-slide.hidden{
+		opacity:0;
+		pointer-events: none;
 	}
 	/* Back-faces positioning */
 	
